--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
     "typescript": "^2.4.2"
   },
   "dependencies": {
+    "@types/text-encoding": "0.0.31",
+    "base64-js": "^1.2.1",
+    "dexie": "^1.5.1",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "scrypt-async": "^1.3.1",
+    "uuid": "^3.1.0"
   }
 }
