--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "redux": "^3.7.2",
     "typescript": "^2.4.2"
   },
   "dependencies": {
     "@types/text-encoding": "0.0.31",
+    "@types/uuid": "^3.4.0",
     "base64-js": "^1.2.1",
     "dexie": "^1.5.1",
-    "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "scrypt-async": "^1.3.1",
     "uuid": "^3.1.0"
