--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "redux-sync3k",
   "version": "0.0.0",
-  "description": "",
+  "description": "redux-sync3k is an offline-first event-sourcing synchronization engine with optional end-to-end encryption.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -9,8 +9,10 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "authors": [
+    "In-Ho Yi <yiinho@google.com>"
+  ],
+  "license": "Apache-2.0",
   "devDependencies": {
     "redux": "^3.7.2",
     "typescript": "^2.4.2"
