--- a/examples/notetaking-app/package.json
+++ b/examples/notetaking-app/package.json
@@ -14,8 +14,8 @@
     "react-redux": "^5.0.5",
     "react-scripts-ts": "2.4.0",
     "redux": "^3.7.2",
-    "redux-sync3k": "file:..\\..",
     "redux-thunk": "^2.2.0",
+    "sync3k-client": "file:..\\..",
     "uuid": "^3.1.0"
   },
   "scripts": {
