--- a/examples/notetaking-app/package.json
+++ b/examples/notetaking-app/package.json
@@ -8,7 +8,6 @@
     "@types/react": "^15.0.38",
     "@types/react-dom": "^15.5.1",
     "@types/uuid": "^3.4.0",
-    "fsevents": "^1.1.2",
     "lodash": "^4.17.4",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -17,6 +16,9 @@
     "redux-thunk": "^2.2.0",
     "sync3k-client": "file:..\\..",
     "uuid": "^3.1.0"
+  },
+  "optionalDependencies": {
+    "fsevents": "^1.1.2"
   },
   "devDependencies": {
     "app-root-path": "^2.0.1",
