--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "types": "dist/src/index.d.ts",
   "scripts": {
     "build": "node node_modules/typescript/bin/tsc",
-    "test": "cross-env NODE_PATH=. ts-node node_modules/jasmine/bin/jasmine.js test/**/*.ts",
-    "test:coverage": "cross-env NODE_PATH=. ts-node node_modules/istanbul/lib/cli.js cover -e .ts  -x \"*.d.ts\" node_modules/jasmine/bin/jasmine.js -- test/**/*.ts"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "authors": [
@@ -15,11 +15,12 @@
   ],
   "license": "Apache-2.0",
   "devDependencies": {
-    "@types/jasmine": "^2.5.53",
+    "@types/jest": "^20.0.8",
+    "app-root-path": "^2.0.1",
     "cross-env": "^5.0.5",
-    "istanbul": "^1.1.0-alpha.1",
-    "jasmine": "^2.7.0",
+    "jest": "^21.0.2",
     "redux": "^3.7.2",
+    "ts-jest": "^21.0.0",
     "ts-node": "^3.3.0",
     "typescript": "^2.4.2"
   },
@@ -31,5 +32,22 @@
     "redux-thunk": "^2.2.0",
     "scrypt-async": "^1.3.1",
     "uuid": "^3.1.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/config/jest/typescriptTransform.js"
+    },
+    "roots": ["src", "test"],
+    "testRegex": "test/.*\\.ts",
+    "moduleDirectories": [
+      "node_modules",
+      "."
+    ],
+    "mapCoverage": true
   }
 }
